--- a/recruiter-filter/package.json
+++ b/recruiter-filter/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://tuhinsaud4614.github.io/Assignment/recruiter-filter",
+  "homepage": "http://tuhinsaud4614.github.io/Assignment",
   "name": "recruiter-filter",
   "private": true,
   "version": "0.0.0",
