--- a/recruiter-filter/package.json
+++ b/recruiter-filter/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://tuhinsaud4614.github.io/Assignment/recruiter-filter",
   "name": "recruiter-filter",
   "private": true,
   "version": "0.0.0",
@@ -8,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "clsx": "^1.2.1",
